Optimize workflow performance and enable virtual threads
- Enable Java Virtual Threads via Spring properties.
- Configure dedicated virtualThreadScheduler for plugin execution.
- Replace Sinks.EmitFailureHandler.FAIL_FAST with busy-looping RETRY_HANDLER.
- Optimize hot path in WorkflowOrchestrator by eliminating Streams and unnecessary allocations.
- Refactor NodeAssembler for reliable context propagation across thread boundaries.
- Standardize on Collections.emptyMap() and standard HashMaps where thread confinement is guaranteed.
- Use Mono.whenDelayError for efficient terminal aggregation.
- Update test suite to align with architectural and API changes.